--- a/404.html
+++ b/404.html
@@ -9,6 +9,7 @@
 	<meta name="robots" content="index,follow"/>
 </head>
 <body>
-	<script type="text/javascript" src="http://qzonestyle.gtimg.cn/qzone_v6/lostchild/search_children.js" charset="utf-8"></script>
+	<script type="text/javascript" src="http://api.dengzhewo.net/api/v10/miss/shareMissInfo?id=88952" charset="utf-8"></script>
+
 </body>
 </html>
